# monkey-language

./: .gitignore  Cargo.toml  README.md  todo.md
.github/workflows/: rust.yml
monkey-language-project/: main.monkey  oldtest.monkey  pointer_arithmetic.monkey  std.monkey  struct_example.asm  test.monkey
src/: lib.rs  main.rs
src/cli/: main_screen.rs  mod.rs  program_args.rs  program_variable.rs
src/core/: constants.rs  mod.rs
src/core/code_generator/: asm_builder.rs  asm_result.rs  conventions.rs  generator.rs  mod.rs  register_destination.rs  registers.rs  target_creator.rs  target_os.rs
src/core/io/: code_line.rs  mod.rs  monkey_file.rs
src/core/lexer/: abstract_syntax_tree_node.rs  collect_tokens_until_scope_close.rs  error.rs  levenshtein_distance.rs  macros.rs  mod.rs  parse.rs  parser.rs  scope.rs  semantic_token_merge.rs  static_type_context.rs  token.rs  token_information.rs  token_match.rs  token_with_span.rs  tokenizer.rs  type_token.rs
src/core/model/: abstract_syntax_tree_node.rs  data_section.rs  mod.rs  scope.rs  scope_type.rs
src/interpreter/: constants.rs  mod.rs
src/utils/: extension_methods.rs  find_recursive_in.rs  math.rs  mod.rs
tests/: assignable_tests.rs  code_line_tests.rs  functions_test.rs  lib.rs  variable_tests.rs
tests/lexer/: assignable_tests.rs  functions_tests.rs  if_tests.rs  mod.rs  semantic_token_merge_tests.rs  tokenizer_tests.rs  variable_tests.rs
tests/optimization/: mod.rs
tests/semantics/: mod.rs
tests/static_type_checking/: infer_types.rs  infer_types_assignment.rs  mod.rs  type_check_mismatch.rs
(+323 files in other folders)
