[package]
name = "monkey-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#os specific for windows string error codes
windows = "0.52.0"
windows-core = "0.52.0"
anyhow = "1.0.70"

regex = "1.8.1"
regex-split = "0.1.0"

binary_search_tree = "0.2.2"
lazy-regex = "2.5.0"
colored = "2.0.0"
clap = { version = "4.3.11", features = ["derive"]}
